--- a/substrate/bin/node/cli/Cargo.toml
+++ b/substrate/bin/node/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "node-cli"
-version = "3.0.0-dev"
+version = "28.0.0"
 authors.workspace = true
 description = "Liberland node implementation in Rust."
 build = "build.rs"
