--- a/substrate/bin/node/runtime/Cargo.toml
+++ b/substrate/bin/node/runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kitchensink-runtime"
-version = "3.0.0-dev"
+version = "28.0.0"
 authors.workspace = true
 description = "Liberland node runtime."
 edition.workspace = true
