--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,9 @@ jobs:
     uses: ./.github/workflows/check-formatting.yml
   fork-test:
     uses: ./.github/workflows/fork-test.yml
-  test-contracts:
-    uses: ./.github/workflows/test-contracts.yml
+  # TODO: Re-enable once dependency problem is solved for contracts
+  # test-contracts:
+  #   uses: ./.github/workflows/test-contracts.yml
   test:
     uses: ./.github/workflows/test.yml
   try-runtime:
@@ -123,7 +124,8 @@ jobs:
       - build_binary
       - check-formatting
       - fork-test
-      - test-contracts
+      # TODO: Re-enable once dependency problem is solved for contracts
+      # - test-contracts
       - test
       - try-runtime
     steps:
