build: enable metadata-hash feature

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           key: ${{ runner.os }}-cargo-rust-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        run: cargo build --release
+        run: cargo build --release --features metadata-hash
 
       - name: Rename binary
         run: cp target/release/substrate-node linux_x86_build
