--- a/substrate/bin/node/cli/Cargo.toml
+++ b/substrate/bin/node/cli/Cargo.toml
@@ -105,6 +105,9 @@ node-inspect = { optional = true, branch = "release-polkadot-v1.1.0", git = "htt
 try-runtime-cli = { optional = true, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
 serde_json = "1.0.85"
 
+# Frontier
+fp-evm = { version = "3.0.0-dev", default-features = false, features = ["serde"], branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+
 [dev-dependencies]
 sc-keystore = { branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
 sc-client-db = { branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
