--- a/substrate/bin/node/cli/Cargo.toml
+++ b/substrate/bin/node/cli/Cargo.toml
@@ -106,7 +106,17 @@ try-runtime-cli = { optional = true, branch = "release-polkadot-v1.1.0", git = "
 serde_json = "1.0.85"
 
 # Frontier
-fp-evm = { version = "3.0.0-dev", default-features = false, features = ["serde"], branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-api = { branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-db = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-consensus = { branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-mapping-sync = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-rpc = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-rpc-core = { branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-storage = { branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+
+fp-dynamic-fee = { default-features = false, features = ["default"], branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fp-evm = { default-features = false, features = ["serde"], branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fp-rpc = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
 
 [dev-dependencies]
 sc-keystore = { branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
