--- a/substrate/bin/node/rpc/Cargo.toml
+++ b/substrate/bin/node/rpc/Cargo.toml
@@ -44,10 +44,10 @@ substrate-state-trie-migration-rpc = { branch = "release-polkadot-v1.1.0", git =
 thiserror = { version = "1", default-features = false }
 
 # Frontier
-fc-api = { version = "1.0.0-dev", branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
-fc-mapping-sync = { version = "2.0.0-dev", default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
-fc-rpc = { version = "2.0.0-dev", default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
-fc-rpc-core = { version = "1.1.0-dev", branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
-fc-storage = { version = "1.0.0-dev", branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-api = { branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-mapping-sync = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-rpc = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fc-rpc-core = { branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+# fc-storage = { branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
 
-fp-rpc = { version = "3.0.0-dev", default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fp-rpc = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
