fix: install rustfmt using rustup

--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y build-essential git clang curl libssl-dev llvm libudev-dev make protobuf-compiler pkg-config git-restore-mtime
 
+      - name: Install rustfmt
+        run: rustup component add --toolchain $RUSTUP_TOOLCHAIN rustfmt
+
       - name: Checkout
         uses: actions/checkout@v2
 
