feat: add pallet-evm-accounts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members = [
 	"substrate/frame/llm",
 	"substrate/frame/liberland-legislation",
 	"substrate/frame/contracts-registry",
+	"substrate/frame/evm-accounts",
 	"liberland-extension/runtime",
 	"liberland-extension/ink",
 ]
@@ -109,4 +110,3 @@ pallet-elections-phragmen = { path = "substrate/frame/elections-phragmen" }
 pallet-staking = { path = "substrate/frame/staking" }
 pallet-nfts = { path = "substrate/frame/nfts" }
 pallet-assets = { path = "substrate/frame/assets" }
-
