--- a/substrate/frame/evm/Cargo.toml
+++ b/substrate/frame/evm/Cargo.toml
@@ -12,34 +12,34 @@ repository = { workspace = true }
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-environmental = { workspace = true, optional = true }
-evm = { workspace = true, features = ["with-codec"] }
-hash-db = { workspace = true }
-hex = { workspace = true, optional = true }
-hex-literal = { workspace = true }
-impl-trait-for-tuples = "0.2.2"
-log = { workspace = true }
-rlp = { workspace = true, optional = true }
-scale-codec = { package = "parity-scale-codec", workspace = true }
-scale-info = { workspace = true }
+environmental = { version = "1.1.4", default-features = false, optional = true }
+evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false, features = ["with-codec"] }
+hash-db = { version = "0.16.0", default-features = false }
+hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }
+hex-literal = "0.4.1"
+impl-trait-for-tuples = "0.2.1"
+log = { version = "0.4.20", default-features = false }
+rlp = { version = "0.5.2", default-features = false, optional = true }
+scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
+scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
 # Substrate
-frame-benchmarking = { workspace = true, optional = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-std = { workspace = true }
+frame-benchmarking = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk", optional = true }
+frame-support = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
+frame-system = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
+sp-core = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
+sp-io = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
+sp-runtime = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
+sp-std = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
 # Frontier
-fp-account = { workspace = true }
-fp-evm = { workspace = true, features = ["serde"] }
+fp-account = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier" }
+fp-evm = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier", features = ["serde"] }
 
 [dev-dependencies]
-hex = { workspace = true }
+hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 # Substrate
-pallet-balances = { workspace = true, features = ["default", "insecure_zero_ed"] }
-pallet-evm-precompile-simple = { workspace = true, features = ["default"] }
-pallet-timestamp = { workspace = true, features = ["default"] }
+pallet-balances = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk", features = ["default", "insecure_zero_ed"] }
+pallet-evm-precompile-simple = { default-features = false, branch = "polkadot-v1.1.0", git = "https://github.com/polkadot-evm/frontier", features = ["default"] }
+pallet-timestamp = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk", features = ["default"] }
 
 [features]
 default = ["std"]
