fix: ignore Frontier forks

--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -22,3 +22,5 @@ use_field_init_shorthand = true
 # Format comments
 comment_width = 100
 wrap_comments = true
+# Ignored paths
+ignore = ["substrate/frame/evm", "substrate/client/rpc"]
